Fixing image alignment issue

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,7 +41,8 @@ h1 {
 }
 
 .wireframes {
-  display: flex;
+  display: block;
+  text-align: center;
 }
 
 .wireframe_image {
